Projucer: Enforce old Java language version for Android projects
Although Java bytecode/language features are supported on higher Android
API levels, JUCE must support back to Android 24, which requires Java
version 8 or earlier.

--- a/examples/DemoRunner/Builds/Android/app/build.gradle
+++ b/examples/DemoRunner/Builds/Android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 
+java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 def ndkVersionString = "28.1.13356709"
 
 android {
