--- a/extras/AudioPerformanceTest/Builds/Android/settings.gradle
+++ b/extras/AudioPerformanceTest/Builds/Android/settings.gradle
@@ -1,2 +1,5 @@
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '1.0.0'
+}
 rootProject.name = 'AudioPerformanceTest'
 include ':app'
